@@ -1,4 +1,14 @@
-### Test new github action to deploy on GH pages (HEAD -> main)
+### Remove github tasks since github ci does it (HEAD -> main)
+>Fri, 13 Jan 2023 13:07:54 +0100
+
+>Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)
+
+>Commiter: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)
+
+
+
+
+### Test new github action to deploy on GH pages (origin/main, origin/HEAD)
 >Fri, 13 Jan 2023 12:43:36 +0100
 
 >Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)
@@ -8,7 +18,7 @@
 
 
 
-### Update gihub ci workflow (origin/main, origin/HEAD)
+### Update gihub ci workflow
 >Fri, 13 Jan 2023 09:41:03 +0100
 
 >Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)
